# kitada_python-tcpchat

./: README.md  pyproject.toml
src/tcpchat/: __init__.py  __main__.py  client.py
src/tcpserver/: __init__.py  __main__.py  client.py
