[project]
name = "tcpchat"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "森 悠仁(梅田教室)", email = "ta_yujin_mori@nnn.ac.jp" }
]
dependencies = [
    "pysimplegui==4.60.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"tcpchat" = "tcpchat:main"
"tcpserver" = "tcpserver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
	"src/tcpchat",
	"src/tcpserver",
]
